<resources>
    <!-- Fcm service -->
    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data: "</string>
    <string name="log_fcm_data_message">"FCM Data Message: "</string>
    <string name="notification_channel_default">Notifications</string>
    <string name="notification_channel_description_default">Latest Updates</string>

    <!-- Network error messages -->
    <string name="error_unexpected_error">Something went wrong. Please try again later</string>
    <string name="error_bad_connection_try_again">Bad connectivity, please try again</string>
    <string name="error_remote_server_failed">Application server could not respond. Please try later</string>
    <string name="error_paring">Parsing error</string>
    <string name="error_internet_not_connected">Please check your internet connection or try again later.</string>
    <string name="error_device_rooted">This device is rooted. We are not responsible for any kind of data loss and hack. Use it at your own risk!!</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_session_expired">Session expired.</string>

    <!-- Error messages -->
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>

    <!-- Image Chooser -->
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>

    <!-- Dialog -->
    <string name="text_retry">Retry</string>
    <string name="text_exit">Exit</string>
    <string name="text_ok">Ok</string>
    <string name="text_proceed">Proceed</string>
    <string name="text_loading">Loading…</string>
    <string name="text_update">Update</string>

    <!-- Sign In -->
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="error_invalid_password">Please enter valid password.</string>
    <string name="error_invalid_phone_number">Please enter a valid phone number.</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="enter_phone_number_to_continue">Enter your phone no. to continue…</string>
    <string name="txt_hint_enter_phone_number">Enter Phone Number</string>
    <string name="txt_hint_enter_email_id">Enter Email ID</string>
    <string name="txt_hint_enter_password">Password</string>
    <string name="text_start_tutorial_msg">Welcome to MVP Base Project.
        \n\n<b>1.</b> Change applicationId in app gradle.
        \n<b>2.</b> Change app name from app gradle.
        \n<b>3.</b> Replace google-services.json file.
    </string>
    <string name="rational_msg_location_permissions">Please allow location permission to get your current location</string>
    <string name="msg_allow_location_settings">Please enable location in settings.</string>
    <string name="msg_allow_location_settings_force_gps">Please enable location in settings and select high accuracy mode.</string>
    <string name="heading_permission_required">PERMISSION REQUIRED</string>


    <string name="tell_friends">Tell your friends about our great services\n and earn rewards toward future rides.</string>
    <string name="has_send_you_a_referral_link">Hi your friend has send you a referral link, to Sign Up for Demo App </string>
    <string name="invite">Invite</string>
    <string name="share">Share</string>

    <!-- Landing Activity-->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <!-- Sign Up Activity-->
    <string name="txt_display_sign_up_msg">Sign up to Digitech group to continue!</string>
    <string name="txt_sign_up">Sign Up</string>

    <!--OTP Verification Acivity-->
    <string name="header_verify_phone_no">Verify phone no.</string>
    <string name="header_enter_otp">Enter the OTP that you’ve received on the phone number you entered</string>
    <string name="otp_continue">Continue</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="error_please_enter_otp">Please enter OTP.</string>
    <string name="error_please_enter_four_digit_otp">Please enter a 4-digit verification code.</string>

    <!--Home Activity-->
    <string name="home">HOME</string>
    <string name="plans">PLANS</string>
    <string name="cart">CART</string>
    <string name="account">ACCOUNT</string>
    <string name="exit_confirmation_msg">Are you sure you want to exit?</string>

    <!--Subscription Plans Activity-->
    <string name="add_to_compare">Add To Compare</string>
    <string name="remove">Remove</string>
    <string name="monthly">Monthly</string>
    <string name="fixed">Fixed</string>
    <string name="one_time_fee">One Time Fee</string>
    <string name="purchase">Purchase</string>
    <string name="view_details">View Details</string>
    <string name="compare_plans">Compare Plans</string>
    <string name="subscription_plans">Subscription Plans</string>
    <string name="compare_plans_count_error">You can not add more than 2 plans.</string>

    <!--Compare Plans Activity-->
    <string name="comparing_plans">Comparing Plans</string>
    <string name="comparing_with">Comparing With</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="best_rate">Best Rate</string>
    <string name="emi_monthly_fee">EMI (Monthly Fees)</string>
    <string name="processing_fee">Processing Fee</string>
    <string name="branches">Branches</string>
    <string name="door_step_service">Door Step Service</string>
    <string name="for_four_years">For 4 years</string>

    <!--Accounts Fragment-->
    <string name="my_profile">My Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_of_services">Terms Of Service</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_msg">Are you sure you want to logout?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
