<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/screen_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/screen_padding"
                android:text="@string/enter_phone_number_to_continue"
                android:textAppearance="@style/CustomTextAppearance.ExtraLight"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xxxlarge" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etPhone"
                style="@style/OnBoardingEditText"
                android:layout_margin="@dimen/screen_padding"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:digits="0123456789"
                android:hint="@string/txt_hint_enter_phone_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="12" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etPassword"
                style="@style/OnBoardingEditText"
                android:layout_margin="@dimen/screen_padding"
                android:hint="@string/txt_hint_enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:visibility="gone" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                style="@style/accent_button"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/otp_continue" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>