<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/screen_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/screen_padding"
                android:text="@string/txt_display_sign_up_msg"
                android:textColor="@color/black"
                android:textSize="@dimen/font_xxxlarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rilixtech.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/screen_padding"
                    app:ccp_showFlag="false"
                    app:ccp_textSize="@dimen/font_large" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etPhone"
                    style="@style/OnBoardingEditText"
                    android:layout_margin="@dimen/screen_padding"
                    android:layout_marginTop="@dimen/spacing_xlarge"
                    android:hint="@string/txt_hint_enter_phone_number"
                    android:inputType="phone"
                    android:maxLength="12" />
            </LinearLayout>


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/OnBoardingEditText"
                android:layout_margin="@dimen/screen_padding"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:hint="@string/txt_hint_enter_email_id"
                android:inputType="textEmailAddress" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@style/accent_button"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/txt_sign_up" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>